--- a/2020/javascript/package.json
+++ b/2020/javascript/package.json
@@ -12,6 +12,9 @@
   "devDependencies": {
     "benchmark": "^2.1.4",
     "jest": "^27.4.2",
-    "microtime": "^3.0.0"
+    "microtime": "^3.0.0",
+    "json5": "~> 2.2.2",
+    "tough-cookie": "~> 4.1.3",
+    "@babel/traverse": "~> 7.23.2"
   }
 }
