--- a/2021/javascript/package.json
+++ b/2021/javascript/package.json
@@ -17,6 +17,9 @@
   },
   "dependencies": {
     "mathjs": "^10.0.0",
-    "ramda": "^0.27.1"
+    "ramda": "^0.27.1",
+    "json5": "~> 2.2.2",
+    "tough-cookie": "~> 4.1.3",
+    "@babel/traverse": "~> 7.23.2"
   }
 }
